<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    card_view:cardCornerRadius="12dp"
    app:cardElevation="5dp"
    app:contentPadding="4dp"
    android:layout_margin="10dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_green"
    android:padding="16dp"
    android:id="@+id/rvSeason">
    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/tvLeagueTitle"
        android:layout_below="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/league"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvLeague"
        android:layout_below="@+id/tvCaption"
        android:layout_toRightOf="@+id/tvLeagueTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorItems"
        android:textSize="16sp"


        />
    <TextView
        android:id="@+id/tvYear"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorItems"
        android:textSize="16sp"

        />
    <TextView
        android:id="@+id/tvYearTitle"
        android:layout_below="@+id/tvCaption"
        android:layout_toLeftOf="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvMatchDayTitle"
        android:layout_below="@+id/tvLeagueTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_day"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvMatchDay"
        android:layout_below="@+id/tvLeagueTitle"
        android:layout_toRightOf="@+id/tvMatchDayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorItems"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvMatchDays"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvLeagueTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorItems"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvMatchDaysTitle"
        android:layout_below="@+id/tvLeagueTitle"
        android:layout_toLeftOf="@+id/tvMatchDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_days"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tvTeamsTitle"
        android:layout_below="@+id/tvMatchDayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teams"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvTeams"
        android:layout_below="@+id/tvMatchDayTitle"
        android:layout_toRightOf="@+id/tvTeamsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorItems"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvGames"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvMatchDayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorItems"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvGamesTitle"
        android:layout_below="@+id/tvMatchDayTitle"
        android:layout_toLeftOf="@+id/tvGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games"
        android:textSize="16sp"
        />

    </RelativeLayout>

</android.support.v7.widget.CardView>